pause/resume batch generation

--- a/style.css
+++ b/style.css
@@ -5,3 +5,9 @@ div.replacer-batch-count-size{
 div.replacer-generation-size{
     min-width: 11em !important;
 }
+
+button.pause-button{
+    text-align: left;
+    width: fit-content;
+    left: 0;
+}
