--- a/style.css
+++ b/style.css
@@ -11,3 +11,9 @@ button.pause-button{
     width: fit-content;
     left: 0;
 }
+
+#replacer_video_masking_page_label {
+    height: 40px !important;
+    font-size: 120%;
+    text-align: center;
+}
