pause button in the video tab

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ div.replacer-generation-size{
     min-width: 11em !important;
 }
 
-button.pause-button{
+button.replacer-pause-button{
     text-align: left;
     width: fit-content;
     left: 0;
